top bar structure done

--- a/index.html
+++ b/index.html
@@ -4,7 +4,39 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="top-bar">
+      <div class="logo-wrapper">
+        <div class="logo-box">
+          <img src="/assets/img/Logo.png" />
+          <p><strong>HRHR</strong></p>
+        </div>
+        <div>
+          <img src="/assets/img/DrawerToggleIcon.svg" />
+        </div>
+      </div>
+      <div class="top-bar-content">
+        <div class="title-component">
+          <img src="/assets/img/Union.png" />
+          <p>Menumiz HR</p>
+        </div>
+        <div class="actions-component">
+          <div class="search-bar-component"></div>
+          <div class="filter-icon-component"></div>
+          <div class="notification-icon-component"></div>
+          <div class="notification-icon-component"></div>
+          <div class="account-action-component"></div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
