--- a/index.html
+++ b/index.html
@@ -30,11 +30,20 @@
           <p>Menumiz HR</p>
         </div>
         <div class="actions-component">
-          <div class="search-bar-component"></div>
-          <div class="filter-icon-component"></div>
-          <div class="notification-icon-component"></div>
-          <div class="notification-icon-component"></div>
-          <div class="account-action-component"></div>
+          <div class="search-bar-component">
+            <img src="/assets/img/SearchNormal.svg" />
+            <input type="search" placeholder="Enter any keyword" />
+          </div>
+          <div class="filter-icon-component">
+            <img src="/assets/img/FilterIcon.png" />
+          </div>
+          <div class="notification-icon-component">
+            <span class="unread-notification-indication-light"></span>
+            <img src="/assets/img/NotificationIcon.svg" />
+          </div>
+          <div class="account-action-component">
+            <img src="/assets/img/User1Avatar.svg" />
+          </div>
         </div>
       </div>
     </div>
