nav icons added

--- a/index.html
+++ b/index.html
@@ -47,5 +47,20 @@
         </div>
       </div>
     </div>
+    <nav class="nav-bar">
+      <ul class="nav-list">
+        <li class="normal-list-item">Dashboard</li>
+        <li class="normal-list-item">Calendar</li>
+        <li class="normal-list-item">Recruitment</li>
+        <li class="normal-list-item">Employees</li>
+        <li class="normal-list-item leave-item">Leave</li>
+        <li class="normal-list-item">Organization</li>
+        <li class="normal-list-item">Billings</li>
+        <li class="normal-list-item">Engagement</li>
+        <li class="normal-list-item">Development</li>
+        <li class="normal-list-item">Performance</li>
+        <li class="normal-list-item">Reports</li>
+      </ul>
+    </nav>
   </body>
 </html>
