dashboard component progressbar made

--- a/index.html
+++ b/index.html
@@ -129,6 +129,78 @@
         </div>
         <div class="dashboard-component">
           <h1 class="component-title">Dashboard</h1>
+          <div class="component-row">
+            <div class="heatmap-component">
+              <div class="header-row">
+                <p class="component-title">Heatmap</p>
+                <div class="drodowns-component">
+                  <select>
+                    <option>SICKDAY</option>
+                    <option>BIRTHDAY</option>
+                    <option>FAMILYFUNCTION</option>
+                    <option>MATERNITY</option>
+                  </select>
+                  <select>
+                    <option>MARCH 2023</option>
+                    <option>APRIL 2023</option>
+                    <option>MAY 2023</option>
+                    <option>JUNE 2023</option>
+                  </select>
+                </div>
+              </div>
+              <div class="week-days-row">
+                <ul class="days-list" id="daysList">
+                  <li class="day-list-item">Mon</li>
+                  <li class="day-list-item">Tue</li>
+                  <li class="day-list-item">Wed</li>
+                  <li class="day-list-item">Thu</li>
+                  <li class="day-list-item active-day">Fri</li>
+                  <li class="day-list-item">Sat</li>
+                  <li class="day-list-item">Sun</li>
+                </ul>
+              </div>
+              <div class="data-row">
+                <div
+                  class="circular-progress"
+                  data-inner-circle-color="#1E1E1E"
+                  data-percentage="50"
+                  data-progress-color="#6E56E0"
+                  data-bg-color="black"
+                >
+                  <div class="inner-circle"></div>
+                  <p class="percentage">0%</p>
+                </div>
+                <div
+                  class="circular-progress"
+                  data-inner-circle-color="#1E1E1E"
+                  data-percentage="30"
+                  data-progress-color="#6E56E0"
+                  data-bg-color="black"
+                >
+                  <div class="inner-circle"></div>
+                  <p class="percentage">0%</p>
+                </div>
+                <div
+                  class="circular-progress"
+                  data-inner-circle-color="#1E1E1E"
+                  data-percentage="20"
+                  data-progress-color="#6E56E0"
+                  data-bg-color="black"
+                >
+                  <div class="inner-circle"></div>
+                  <p class="percentage">0%</p>
+                </div>
+              </div>
+            </div>
+            <div class="most-day-away-component">
+              <div class="header-row">
+                <ul class="days-list">
+                  <li class="day-list-item"></li>
+                </ul>
+              </div>
+            </div>
+            <div class="avatar-component"></div>
+          </div>
         </div>
         <div id="notificationsComponent" class="notifications-component">
           <div class="notify-header">
