working on leave-request table component

--- a/index.html
+++ b/index.html
@@ -220,14 +220,14 @@
                 <ul class="most-day-away-list">
                   <li class="most-day-away-list-item">
                     <div class="user-name-pic">
-                      <img src="/assets/img/User1Avatar.svg" />
+                      <img src="/assets/img/User2Avatar.png" />
                       <p class="user-name">Mark Jacobs</p>
                     </div>
                     <p class="away-days-info">5.0 day(s)</p>
                   </li>
                   <li class="most-day-away-list-item">
                     <div class="user-name-pic">
-                      <img src="/assets/img/User2Avatar.png" />
+                      <img src="/assets/img/User1Avatar.svg" />
                       <p class="user-name">Charlie Kristen</p>
                     </div>
                     <p class="away-days-info">3.5 day(s)</p>
@@ -254,6 +254,86 @@
             </div>
             <div class="avatar-component">
               <img src="/assets/img/User2Avatar.png" />
+            </div>
+          </div>
+        </div>
+        <div class="leave-requests-component">
+          <div class="component-title-row">
+            <h1 class="component-title">Leave Requests</h1>
+            <div class="request-view-type-buttons-component">
+              <button id="listViewBtn" class="list-view active">
+                List View
+              </button>
+              <button id="monthViewBtn" class="month-view">Month-view</button>
+            </div>
+          </div>
+          <div class="component-row">
+            <div class="heatmap-component">
+              <!-- <div class="header-row">
+                <p class="component-title">Heatmap</p>
+                <div class="drodowns-component">
+                  <select>
+                    <option>SICKDAY</option>
+                    <option>BIRTHDAY</option>
+                    <option>FAMILYFUNCTION</option>
+                    <option>MATERNITY</option>
+                  </select>
+                  <select>
+                    <option>MARCH 2023</option>
+                    <option>APRIL 2023</option>
+                    <option>MAY 2023</option>
+                    <option>JUNE 2023</option>
+                  </select>
+                </div>
+              </div> -->
+              <!-- <div class="week-days-row">
+                <ul class="days-list" id="daysList">
+                  <li class="day-list-item">Mon</li>
+                  <li class="day-list-item">Tue</li>
+                  <li class="day-list-item">Wed</li>
+                  <li class="day-list-item">Thu</li>
+                  <li class="day-list-item active-day">Fri</li>
+                  <li class="day-list-item">Sat</li>
+                  <li class="day-list-item">Sun</li>
+                </ul>
+              </div> -->
+              <div class="data-row">
+                <table id="leaveRequestsTable" class="leave-requests-table">
+                  <thead class="table-head">
+                    <tr class="table-head-row">
+                      <td class="table-col check-col">
+                        <input type="checkbox" />#
+                        <span class="sort-icon">
+                          <img src="/assets/img/SortIcon.svg" />
+                        </span>
+                      </td>
+                      <td class="table-col name-col">
+                        NAME
+                        <span class="sort-icon">
+                          <img src="/assets/img/SortIcon.svg" />
+                        </span>
+                      </td>
+                      <td class="table-col days-col">
+                        DAY(S)
+                        <span class="sort-icon">
+                          <img src="/assets/img/SortIcon.svg" />
+                        </span>
+                      </td>
+                      <td class="table-col leave-col">
+                        LEAVE TYPE
+                        <span class="sort-icon">
+                          <img src="/assets/img/SortIcon.svg" />
+                        </span>
+                      </td>
+                      <td class="table-col actions-col">ACTIONS</td>
+                    </tr>
+                  </thead>
+                  <tbody></tbody>
+                </table>
+              </div>
+              <div class="component-footer">
+                <p>Most popular day: Friday</p>
+              </div>
             </div>
           </div>
         </div>
