leave request: table made

--- a/index.html
+++ b/index.html
@@ -313,6 +313,18 @@
                           <img src="/assets/img/SortIcon.svg" />
                         </span>
                       </td>
+                      <!-- <td class="table-col period-col">
+                        Period
+                        <span class="sort-icon">
+                          <img src="/assets/img/SortIcon.svg" />
+                        </span>
+                      </td> -->
+                      <td class="table-col period-col">
+                        Period
+                        <span class="sort-icon">
+                          <img src="/assets/img/SortIcon.svg" />
+                        </span>
+                      </td>
                       <td class="table-col days-col">
                         DAY(S)
                         <span class="sort-icon">
@@ -329,6 +341,187 @@
                     </tr>
                   </thead>
                   <tbody></tbody>
+                  <tbody>
+                    <tr class="table-body-row">
+                      <td class="table-col check-col pending-request">
+                        <input type="checkbox" />
+                      </td>
+                      <td class="table-col name-col">
+                        <img src="/assets/img/User2Avatar.png" />
+                        <label class="user-name">Mark Jacobs</label>
+                      </td>
+                      <td class="table-col period-col">
+                        <span class="period-col-span">
+                          <label class="">31 Mar, 2023 09:00 AM</label>
+                          <label class="">31 Mar, 2023 18:00 PM</label>
+                        </span>
+                      </td>
+                      <td class="table-col days-col">
+                        <label>1.0</label>
+                      </td>
+                      <td class="table-col leave-col">
+                        <label>Annual Leave</label>
+                      </td>
+                      <td class="table-col actions-col">
+                        <span class="actions-col-span">
+                          <span class="buttons-span">
+                            <button class="reject">REJECT</button>
+                            <button class="approve">APPROVE</button>
+                          </span>
+                          <img src="/assets/img/RightIcon.svg" />
+                        </span>
+                      </td>
+                    </tr>
+                    <tr class="table-body-row">
+                      <td class="table-col check-col pending-request">
+                        <input type="checkbox" />
+                      </td>
+                      <td class="table-col name-col">
+                        <img src="/assets/img/User2Avatar.png" />
+                        <label class="user-name">Mark Jacobs</label>
+                      </td>
+                      <td class="table-col period-col">
+                        <span class="period-col-span">
+                          <label class="">31 Mar, 2023 09:00 AM</label>
+                          <label class="">31 Mar, 2023 18:00 PM</label>
+                        </span>
+                      </td>
+                      <td class="table-col days-col">
+                        <label>1.0</label>
+                      </td>
+                      <td class="table-col leave-col">
+                        <label>Annual Leave</label>
+                      </td>
+                      <td class="table-col actions-col">
+                        <span class="actions-col-span">
+                          <span class="buttons-span">
+                            <button class="reject">REJECT</button>
+                            <button class="approve">APPROVE</button>
+                          </span>
+                          <img src="/assets/img/RightIcon.svg" />
+                        </span>
+                      </td>
+                    </tr>
+                    <tr class="table-body-row">
+                      <td class="table-col check-col pending-request">
+                        <input type="checkbox" />
+                      </td>
+                      <td class="table-col name-col">
+                        <img src="/assets/img/User2Avatar.png" />
+                        <label class="user-name">Mark Jacobs</label>
+                      </td>
+                      <td class="table-col period-col">
+                        <span class="period-col-span">
+                          <label class="">31 Mar, 2023 09:00 AM</label>
+                          <label class="">31 Mar, 2023 18:00 PM</label>
+                        </span>
+                      </td>
+                      <td class="table-col days-col">
+                        <label>1.0</label>
+                      </td>
+                      <td class="table-col leave-col">
+                        <label>Annual Leave</label>
+                      </td>
+                      <td class="table-col actions-col">
+                        <span class="actions-col-span">
+                          <span class="buttons-span">
+                            <button class="reject">REJECT</button>
+                            <button class="approve">APPROVE</button>
+                          </span>
+                          <img src="/assets/img/RightIcon.svg" />
+                        </span>
+                      </td>
+                    </tr>
+                    <tr class="table-body-row">
+                      <td class="table-col check-col pending-request">
+                        <input type="checkbox" />
+                      </td>
+                      <td class="table-col name-col">
+                        <img src="/assets/img/User2Avatar.png" />
+                        <label class="user-name">Mark Jacobs</label>
+                      </td>
+                      <td class="table-col period-col">
+                        <span class="period-col-span">
+                          <label class="">31 Mar, 2023 09:00 AM</label>
+                          <label class="">31 Mar, 2023 18:00 PM</label>
+                        </span>
+                      </td>
+                      <td class="table-col days-col">
+                        <label>1.0</label>
+                      </td>
+                      <td class="table-col leave-col">
+                        <label>Annual Leave</label>
+                      </td>
+                      <td class="table-col actions-col">
+                        <span class="actions-col-span">
+                          <span class="buttons-span">
+                            <button class="reject">REJECT</button>
+                            <button class="approve">APPROVE</button>
+                          </span>
+                          <img src="/assets/img/RightIcon.svg" />
+                        </span>
+                      </td>
+                    </tr>
+                    <tr class="table-body-row">
+                      <td class="table-col check-col approved-request">
+                        <input type="checkbox" />
+                      </td>
+                      <td class="table-col name-col">
+                        <img src="/assets/img/User2Avatar.png" />
+                        <label class="user-name">Mark Jacobs</label>
+                      </td>
+                      <td class="table-col period-col">
+                        <span class="period-col-span">
+                          <label class="">31 Mar, 2023 09:00 AM</label>
+                          <label class="">31 Mar, 2023 18:00 PM</label>
+                        </span>
+                      </td>
+                      <td class="table-col days-col">
+                        <label>1.0</label>
+                      </td>
+                      <td class="table-col leave-col">
+                        <label>Annual Leave</label>
+                      </td>
+                      <td class="table-col actions-col">
+                        <span class="actions-col-span">
+                          <span class="approved-buttons-span">
+                            <button class="approve">APPROVED</button>
+                          </span>
+                          <img src="/assets/img/RightIcon.svg" />
+                        </span>
+                      </td>
+                    </tr>
+                    <tr class="table-body-row">
+                      <td class="table-col check-col approved-request">
+                        <input type="checkbox" />
+                      </td>
+                      <td class="table-col name-col">
+                        <img src="/assets/img/User2Avatar.png" />
+                        <label class="user-name">Mark Jacobs</label>
+                      </td>
+                      <td class="table-col period-col">
+                        <span class="period-col-span">
+                          <label class="">31 Mar, 2023 09:00 AM</label>
+                          <label class="">31 Mar, 2023 18:00 PM</label>
+                        </span>
+                      </td>
+                      <td class="table-col days-col">
+                        <label>1.0</label>
+                      </td>
+                      <td class="table-col leave-col">
+                        <label>Annual Leave</label>
+                      </td>
+                      <td class="table-col actions-col">
+                        <span class="actions-col-span">
+                          <span class="approved-buttons-span">
+                            <!-- <button class="reject">REJECT</button> -->
+                            <button class="approve">APPROVED</button>
+                          </span>
+                          <img src="/assets/img/RightIcon.svg" />
+                        </span>
+                      </td>
+                    </tr>
+                  </tbody>
                 </table>
               </div>
               <div class="component-footer">
