table data updated

--- a/index.html
+++ b/index.html
@@ -313,12 +313,6 @@
                           <img src="/assets/img/SortIcon.svg" />
                         </span>
                       </td>
-                      <!-- <td class="table-col period-col">
-                        Period
-                        <span class="sort-icon">
-                          <img src="/assets/img/SortIcon.svg" />
-                        </span>
-                      </td> -->
                       <td class="table-col period-col">
                         Period
                         <span class="sort-icon">
@@ -377,7 +371,7 @@
                         <input type="checkbox" />
                       </td>
                       <td class="table-col name-col">
-                        <img src="/assets/img/User2Avatar.png" />
+                        <img src="/assets/img/User1Avatar.svg" />
                         <label class="user-name">Mark Jacobs</label>
                       </td>
                       <td class="table-col period-col">
@@ -407,7 +401,7 @@
                         <input type="checkbox" />
                       </td>
                       <td class="table-col name-col">
-                        <img src="/assets/img/User2Avatar.png" />
+                        <img src="/assets/img/User3Avatar.png" />
                         <label class="user-name">Mark Jacobs</label>
                       </td>
                       <td class="table-col period-col">
@@ -467,7 +461,7 @@
                         <input type="checkbox" />
                       </td>
                       <td class="table-col name-col">
-                        <img src="/assets/img/User2Avatar.png" />
+                        <img src="/assets/img/User1Avatar.svg" />
                         <label class="user-name">Mark Jacobs</label>
                       </td>
                       <td class="table-col period-col">
@@ -496,7 +490,7 @@
                         <input type="checkbox" />
                       </td>
                       <td class="table-col name-col">
-                        <img src="/assets/img/User2Avatar.png" />
+                        <img src="/assets/img/User3Avatar.png" />
                         <label class="user-name">Mark Jacobs</label>
                       </td>
                       <td class="table-col period-col">
