--- a/index.html
+++ b/index.html
@@ -269,34 +269,6 @@
           </div>
           <div class="component-row">
             <div class="heatmap-component">
-              <!-- <div class="header-row">
-                <p class="component-title">Heatmap</p>
-                <div class="drodowns-component">
-                  <select>
-                    <option>SICKDAY</option>
-                    <option>BIRTHDAY</option>
-                    <option>FAMILYFUNCTION</option>
-                    <option>MATERNITY</option>
-                  </select>
-                  <select>
-                    <option>MARCH 2023</option>
-                    <option>APRIL 2023</option>
-                    <option>MAY 2023</option>
-                    <option>JUNE 2023</option>
-                  </select>
-                </div>
-              </div> -->
-              <!-- <div class="week-days-row">
-                <ul class="days-list" id="daysList">
-                  <li class="day-list-item">Mon</li>
-                  <li class="day-list-item">Tue</li>
-                  <li class="day-list-item">Wed</li>
-                  <li class="day-list-item">Thu</li>
-                  <li class="day-list-item active-day">Fri</li>
-                  <li class="day-list-item">Sat</li>
-                  <li class="day-list-item">Sun</li>
-                </ul>
-              </div> -->
               <div class="data-row">
                 <table id="leaveRequestsTable" class="leave-requests-table">
                   <thead class="table-head">
@@ -335,187 +307,7 @@
                     </tr>
                   </thead>
                   <tbody></tbody>
-                  <tbody>
-                    <tr class="table-body-row">
-                      <td class="table-col check-col pending-request">
-                        <input type="checkbox" />
-                      </td>
-                      <td class="table-col name-col">
-                        <img src="/assets/img/User2Avatar.png" />
-                        <label class="user-name">Mark Jacobs</label>
-                      </td>
-                      <td class="table-col period-col">
-                        <span class="period-col-span">
-                          <label class="">31 Mar, 2023 09:00 AM</label>
-                          <label class="">31 Mar, 2023 18:00 PM</label>
-                        </span>
-                      </td>
-                      <td class="table-col days-col">
-                        <label>1.0</label>
-                      </td>
-                      <td class="table-col leave-col">
-                        <label>Annual Leave</label>
-                      </td>
-                      <td class="table-col actions-col">
-                        <span class="actions-col-span">
-                          <span class="buttons-span">
-                            <button class="reject">REJECT</button>
-                            <button class="approve">APPROVE</button>
-                          </span>
-                          <img src="/assets/img/RightIcon.svg" />
-                        </span>
-                      </td>
-                    </tr>
-                    <tr class="table-body-row">
-                      <td class="table-col check-col pending-request">
-                        <input type="checkbox" />
-                      </td>
-                      <td class="table-col name-col">
-                        <img src="/assets/img/User1Avatar.svg" />
-                        <label class="user-name">Mark Jacobs</label>
-                      </td>
-                      <td class="table-col period-col">
-                        <span class="period-col-span">
-                          <label class="">31 Mar, 2023 09:00 AM</label>
-                          <label class="">31 Mar, 2023 18:00 PM</label>
-                        </span>
-                      </td>
-                      <td class="table-col days-col">
-                        <label>1.0</label>
-                      </td>
-                      <td class="table-col leave-col">
-                        <label>Annual Leave</label>
-                      </td>
-                      <td class="table-col actions-col">
-                        <span class="actions-col-span">
-                          <span class="buttons-span">
-                            <button class="reject">REJECT</button>
-                            <button class="approve">APPROVE</button>
-                          </span>
-                          <img src="/assets/img/RightIcon.svg" />
-                        </span>
-                      </td>
-                    </tr>
-                    <tr class="table-body-row">
-                      <td class="table-col check-col pending-request">
-                        <input type="checkbox" />
-                      </td>
-                      <td class="table-col name-col">
-                        <img src="/assets/img/User3Avatar.png" />
-                        <label class="user-name">Mark Jacobs</label>
-                      </td>
-                      <td class="table-col period-col">
-                        <span class="period-col-span">
-                          <label class="">31 Mar, 2023 09:00 AM</label>
-                          <label class="">31 Mar, 2023 18:00 PM</label>
-                        </span>
-                      </td>
-                      <td class="table-col days-col">
-                        <label>1.0</label>
-                      </td>
-                      <td class="table-col leave-col">
-                        <label>Annual Leave</label>
-                      </td>
-                      <td class="table-col actions-col">
-                        <span class="actions-col-span">
-                          <span class="buttons-span">
-                            <button class="reject">REJECT</button>
-                            <button class="approve">APPROVE</button>
-                          </span>
-                          <img src="/assets/img/RightIcon.svg" />
-                        </span>
-                      </td>
-                    </tr>
-                    <tr class="table-body-row">
-                      <td class="table-col check-col pending-request">
-                        <input type="checkbox" />
-                      </td>
-                      <td class="table-col name-col">
-                        <img src="/assets/img/User2Avatar.png" />
-                        <label class="user-name">Mark Jacobs</label>
-                      </td>
-                      <td class="table-col period-col">
-                        <span class="period-col-span">
-                          <label class="">31 Mar, 2023 09:00 AM</label>
-                          <label class="">31 Mar, 2023 18:00 PM</label>
-                        </span>
-                      </td>
-                      <td class="table-col days-col">
-                        <label>1.0</label>
-                      </td>
-                      <td class="table-col leave-col">
-                        <label>Annual Leave</label>
-                      </td>
-                      <td class="table-col actions-col">
-                        <span class="actions-col-span">
-                          <span class="buttons-span">
-                            <button class="reject">REJECT</button>
-                            <button class="approve">APPROVE</button>
-                          </span>
-                          <img src="/assets/img/RightIcon.svg" />
-                        </span>
-                      </td>
-                    </tr>
-                    <tr class="table-body-row">
-                      <td class="table-col check-col approved-request">
-                        <input type="checkbox" />
-                      </td>
-                      <td class="table-col name-col">
-                        <img src="/assets/img/User1Avatar.svg" />
-                        <label class="user-name">Mark Jacobs</label>
-                      </td>
-                      <td class="table-col period-col">
-                        <span class="period-col-span">
-                          <label class="">31 Mar, 2023 09:00 AM</label>
-                          <label class="">31 Mar, 2023 18:00 PM</label>
-                        </span>
-                      </td>
-                      <td class="table-col days-col">
-                        <label>1.0</label>
-                      </td>
-                      <td class="table-col leave-col">
-                        <label>Annual Leave</label>
-                      </td>
-                      <td class="table-col actions-col">
-                        <span class="actions-col-span">
-                          <span class="approved-buttons-span">
-                            <button class="approve">APPROVED</button>
-                          </span>
-                          <img src="/assets/img/RightIcon.svg" />
-                        </span>
-                      </td>
-                    </tr>
-                    <tr class="table-body-row">
-                      <td class="table-col check-col approved-request">
-                        <input type="checkbox" />
-                      </td>
-                      <td class="table-col name-col">
-                        <img src="/assets/img/User3Avatar.png" />
-                        <label class="user-name">Mark Jacobs</label>
-                      </td>
-                      <td class="table-col period-col">
-                        <span class="period-col-span">
-                          <label class="">31 Mar, 2023 09:00 AM</label>
-                          <label class="">31 Mar, 2023 18:00 PM</label>
-                        </span>
-                      </td>
-                      <td class="table-col days-col">
-                        <label>1.0</label>
-                      </td>
-                      <td class="table-col leave-col">
-                        <label>Annual Leave</label>
-                      </td>
-                      <td class="table-col actions-col">
-                        <span class="actions-col-span">
-                          <span class="approved-buttons-span">
-                            <!-- <button class="reject">REJECT</button> -->
-                            <button class="approve">APPROVED</button>
-                          </span>
-                          <img src="/assets/img/RightIcon.svg" />
-                        </span>
-                      </td>
-                    </tr>
-                  </tbody>
+                  <tbody id="leaveRequestTableBody"></tbody>
                 </table>
               </div>
               <div class="component-footer">
