making progress bar

--- a/index.html
+++ b/index.html
@@ -411,6 +411,17 @@
         </div>
       </main>
     </div>
+    <div
+      id="approveToastNotification"
+      style=""
+      class="approve-toast-notification"
+    >
+      <div class="notification-header">
+        <div class="progress-bar">
+          <div class="progress"></div>
+        </div>
+      </div>
+    </div>
     <script type="text/javascript" src="/assets/js/main.js"></script>
   </body>
 </html>
